--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@expo/vector-icons": "^13.0.0",
+    "@mui/material": "^5.11.7",
+    "@react-native-material/core": "^1.3.7",
     "expo": "~47.0.8",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.2",
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
