--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@expo/vector-icons": "^13.0.0",
     "@mui/material": "^5.11.7",
     "@react-native-material/core": "^1.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "native-base": "^3.4.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
