--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@expo/vector-icons": "^13.0.0",
     "@mui/material": "^5.11.7",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/stack": "^6.3.12",
